client/src/App.css
/* ... */
.footer__text {
  font-size: 14px;
  color: rgb(76, 80, 80);
}


/* HOMEPAGE */

.homepage__title,
.userpage__title {
  text-align: left;
  line-height: 3.5rem;
  font-size: 4rem;
  margin-top: 8rem;
  margin-left: 1rem;
  margin-bottom: 1rem;
  color: rgb(248, 250, 252);
}

.homepage__text,
.userpage__text {
  font-size: 1rem;
  color: rgb(248, 250, 252);
  text-align: left;
  margin-left: 1rem;
}

.homepage__buttons-container,
.userpage__buttons-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin-top: 2rem;
}

.homepage__startquiz-button,
.homepage__getrandom-button,
.userpage__startquiz-button,
.userpage__getrandom-button,
.favorites__button {
  
  background-color: rgb(248, 250, 252);
  color: #ff9190;
  font-size: 1.3rem;
  font-weight: bold;
  padding: 0.7rem 1.6rem;
  border: none;
  border-radius: 20px;
  margin-top: 1rem;
  margin-right: 1rem;
  margin-bottom: 0.7rem;
  cursor: pointer;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
}

.homepage__getrandom-button,
.userpage__getrandom-button {
  background-color: transparent;
  color: rgb(248, 250, 252);
  border: 1px solid white;
}

.homepage__getrandom-button:hover,
.userpage__getrandom-button:hover {
  background-color: rgba(239, 239, 239, 0.4);
}


.homepage__startquiz-button:hover,
.userpage__startquiz-button:hover {
  background-color: rgb(239, 239, 239);
}

  
  /* SIGNIN BTN */
  
  .homepage__signin-container {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 16px;
  }
  
  .homepage__signin-button {
    background-color: rgb(77, 179, 181);
    /* position: absolute;
    top: 2.5rem;
    right: 1rem; */
    color: rgb(255, 255, 255);
    text-decoration: bold;
    font-size: 1.2rem;
    font-weight: normal;
    padding: 0.3rem 1.1rem;
    border: none;
    border-radius: 18px;
    margin-right: 1rem;
    margin-bottom: 3rem;
    cursor: pointer;
	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); 
  }

  .auth__signout-btn {
    background-color: transparent;
    position: absolute;
    top: 2.5rem;
    right: 1rem;
    color: rgb(128, 126, 126);
    text-decoration: bold;
    text-decoration: underline;
    font-size: 0.8rem;
    font-weight: normal;
    padding: 0.2rem 0.8rem;
    border: none;
    border-radius: 12px;
    margin-right: 1rem;
    margin-bottom: 3rem;
    cursor: pointer;
  }
  
  
  
  .homepage__signin-button:hover {
    background-color: #c7c9c9;
  }

  /* SIGNIN POPUP */
  
  .signin-popup {
	display: flex;
	justify-content: center;
	align-items: center;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.5);
	z-index: 1;
  }
  
  .signin-popup__content {
	background-color: rgba(255, 255, 255, 0.8);
	padding: 20px;
	border-radius: 5px;
	width: 400px;
  }
  
  .signin-popup__close-button {
	display: block;
	text-align: right;
	font-size: 24px;
	cursor: pointer;
  }
  
  .signin-popup__input {
	display: block;
	width: 100%;
	padding: 10px;
	margin-bottom: 10px;
	border-radius: 5px;
	border: 1px solid #ccc;
  }
  
  .signin-popup__signin-button {
	background-color:#1d8296;
	color: white;
	padding: 10px 20px;
	border: none;
	border-radius: 5px;
	cursor: pointer;
	margin-bottom: 0.5rem;
  }
  
  .signin-popup__signin-button:hover {
	background-color: #1d8296;
  }
  
  .signin-popup__separator{
	margin: 1rem 0;
	text-align: center;
	font-weight: lighter;
	font-size: 1rem;
	color: #333;
  }
  
  .google-signin {
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    border-radius: 3px;
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
      rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
    color: #6e6868;
    cursor: pointer;
    font-size: 16px;
    font-weight: bold;
    height: 40px;
    margin: 0 auto;
    padding: 0 24px;
    text-align: center;
    transition: box-shadow 0.2s ease;
    background-color: #fff;
  }
  
  .google-signin:hover {
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
      rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
  }
  
  .google-signin img {
    margin-right: 8px;
    width: 18px;
  }

.homepage__signin-container {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 16px;
}


.quiz__quit-button {
  background-color: transparent;
  color: rgb(82, 82, 82);
  font-size: 1.2rem;
  font-weight: bold;
  padding: 0.3rem 1.2rem;
  border: none;
  border-radius: 20px;
  cursor: pointer;
  float: right;
}

.homepage__signin-button:hover {
  background-color: #c7c9c9;
}

/* SIGNIN POPUP */

.signin-popup__signup-message {
  margin-right: 16px;
  font-size: 14px;
}

.signin-popup__signup-button {
  background-color: transparent;
  color: #1d8296;
  border: none;
  outline: none;
  font-size: 14px;
  font-weight: bold;
  cursor: pointer;
}

.signin-popup__signup-button:hover {
  text-decoration: underline;
  background-color: rgb(214, 214, 214)
}


/* /////////// */

/* SIGNUP-POPUP */

.signup-popup {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(36, 36, 36, 0.5);
  z-index: 1;
}

.signup-popup__content {
  background-color: #fff;
  padding: 60px;
  border-radius: 5px;
  width: 400px;
}

.signup-popup__title {
  color: rgb(137, 137, 137);
  padding-bottom: 10px;
}

/* TODO check if display and text-align are necessary */

.signup-popup__close {
  display: block;
  text-align: right;
  font-size: 24px;
  cursor: pointer;
}

.signup-popup__input {
  display: block;
  width: 100%;
  padding: 10px;
  margin-bottom: 10px;
  border-radius: 5px;
  border: 1px solid #ccc;
}

.signup-popup__signup-button {
  background-color: #1d8296;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}
/* ... */

